--- a/grid.css
+++ b/grid.css
@@ -16,4 +16,7 @@ body {
 .container div:nth-child(4) {
     background-color: burlywood;
 }
+.container div:nth-child(2) {
+    background-color: burlywood;
+}
 
